<resources>
    <string name="app_name">UDEX</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_orders">Orders</string>
    <string name="title_order_book">Order Book</string>
    <string name="title_markets">Markets</string>
    <string name="title_settings">Settings</string>
    <string name="balance_receive">Receive</string>
    <string name="balance_send">Send</string>
    <string name="balance_transactions">Transactions</string>
    <string name="message_words_validated">Wallet has been restored</string>
    <string name="message_invalid_amount">Invalid trade amount</string>
    <string name="message_order_created">Order successfully placed</string>
    <string name="message_cancel_started">Cancel processing…</string>
    <string name="error_invalid_coin">Invalid coin symbol</string>
    <string name="error_send">Send error</string>
    <string name="hint_your_account">Your account</string>
    <string name="hint_all_transactions">All transactions</string>
    <string name="hint_available_balance">Available Balance</string>
    <string name="hint_equity_value">Equity Value (%1$s) ~</string>
    <string name="hint_you_send">You send $%1$s</string>
    <string name="hint_i_have">I sell %1$s USD</string>
    <string name="hint_i_want">I buy %1$s USD</string>
    <string name="subtitle_restore">Enter Secret Key</string>
    <string name="subtitle_transaction_sent">Transaction sent \u2713</string>
    <string name="markets_list_hint">market info (24h)</string>
    <string name="message_wait_blockchain">Wait till transaction is added to blockchain</string>
    <string name="message_order_creating">Order processing…</string>
    <string name="message_exchange_in_progress">Exchange in Progress…</string>
    <string name="error_invalid_amount">Not enough funds</string>
    <string name="error_insufficient_fee_balance">Insufficient fee balance!</string>
    <string name="error_insufficient_balance">Insufficient balance!</string>
    <string name="error_invalid_mnemonic">Invalid mnemonic</string>
    <string name="error_exchange_failed">Exchange failed</string>
    <string name="error_order_place">Order place failed</string>
    <string name="error_cancel_order">Order cancel failed</string>
    <string name="error_timeout_error">Request Timeout</string>
    <string name="error_wrap_failed">Wrap failed</string>
    <string name="error_unwrap_failed">Unwrap failed</string>
    <string name="send_success">\u2713 Sent</string>
    <string name="message_copied">Copied</string>
    <string name="transaction_receive">Receive</string>
    <string name="transaction_sent">Sent</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="settings_security_center">Security Center</string>
    <string name="settings_language">Language</string>
    <string name="settings_light_mode">Light Mode</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_share">Tell Friends</string>
    <string name="settings_how_it_works">How it Works?</string>
    <string name="settings_address_book">Address Book</string>
    <string name="title_trade_history">Trade History</string>
    <string name="settings_coin_manager">Coin Manager</string>
    <string name="action_cancel_order">Cancel order</string>
    <string name="action_forward">Share</string>
    <string name="hint_your_address">Your address</string>
    <string name="action_convert">Convert</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_restore_wallet">Restore</string>
    <string name="action_view_on">View on Etherscan.io</string>
    <string name="action_send">Send</string>
    <string name="action_wrap">Wrap</string>
    <string name="action_unwrap">Unwrap</string>
    <string name="action_buy_crypto">Buy Crypto</string>
    <string name="info_fee">Fee:</string>
    <string name="info_estimated_fee">Estimated Fee:</string>
    <string name="info_total">Total:</string>
    <string name="info_total_receive">Total Receive:</string>
    <string name="info_historical_rate">Rate Received:</string>
    <string name="info_date">Time:</string>
    <string name="info_status">Status:</string>
    <string name="info_from">From:</string>
    <string name="info_to">To:</string>
    <string name="info_duration">Processing Time:</string>
    <string name="info_price_per_token">Price Per Token:</string>
    <string name="info_filled_amount">Filled Amount:</string>
    <string name="info_total_sell_amount">Total Sell Amount:</string>
    <string name="info_expire_at">Expire At:</string>
    <string name="message_syncing">SYNCING…</string>
    <string name="message_empty_transactions">NO TRANSACTIONS YET</string>
    <string name="message_empty_exchange_history">NO HISTORY YET</string>
    <string name="message_empty_orders">NO ORDERS YET</string>
    <string name="top_up_title">Top-up Your Account</string>
    <string name="top_up_description">Add coins before starting\nto exchange</string>
    <string name="error_enter_your_pin">Enter your pin</string>
    <string name="fingerprint_success">Success</string>
    <string name="fingerprint_not_recognized">Not recognized</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="passcode_title">Passcode</string>
    <string name="passcode_info">Your passcode will be used to unlock your wallet and send money</string>
    <string name="passcode_error_short_pin">Please enter all digits.</string>
    <string name="passcode_confirm_info">Confirm</string>
    <string name="passcode_success">Passcode was set successfully!</string>
    <string name="passcode_error_pins_dont_match">Passcode did not match. Try again.</string>
    <string name="passcode_error_failed_to_save_pin">Error occurred while saving your passcode. Please, try again.</string>
    <string name="passcode_edit">Edit Passcode</string>
    <string name="passcode_new_info">New Passcode</string>
    <string name="passcode_current_info">Current Passcode</string>
    <string name="onboarding_about_app">Decentralized\nExchange</string>
    <string name="onboarding_main_page">UDEX is a decentralized, real-time\nand non-custodial exchange built\non 0x protocol technology</string>
    <string name="onboarding_tokens_page">Trade Ether and Ethereum-based\ntokens directly with other users</string>
    <string name="onboarding_p2p_page">Trade peer-to-peer any ERC20\ntoken from your own wallet\nwithout trading fees</string>
    <string name="info_weth">WETH lets you trade ETH for other ERC20 tokens on decentralized exchanges like UDEX.
        \n\nUnlike ETH, WETH is ERC20 compliant.
        It used in the smart contracts that facilitate trades between users.
        When you "wrap" ETH, you are trading your ETH for WETH via a smart contract.
        WETH always has the same value as ETH.
        WETH can be unwrapped back into ETH at any time.
    </string>
    <string name="error_biometric_not_enabled">Biometric Not Enabled</string>
    <string name="error_biometric_not_added_yet">You have not enabled biometric on this device. Go to Settings > Security to set up fingerprint or face access.</string>
    <string name="ok">Ok</string>
    <string name="message_keys_invalidated_title">Android Keystore Error</string>
    <string name="message_keys_invalidated_description">The encrypted data holding your wallet was recently invalidated because your Android lock screen was changed</string>
    <string name="message_title_warning">Warning</string>
    <string name="message_no_device_lock_description">Set up a lock screen on this device to continue. Go to “Settings” > “Security” > “Screen Lock” and enable the lock screen setting.</string>
    <string name="message_custom_keyboard_used">You are using a third-party keyboard. You have to use default keyboard.</string>
    <string name="backup_intro_subtitle">Show Key</string>
    <string name="backup_intro_text">Your private key is the only way to restore access to your funds if your phone is ever lost, stolen, broken etc.\n\n\nMake sure that no one is watching your screen.</string>
    <string name="keystore_system_lock_required">System Lock</string>
    <string name="keystore_key_invalidated">KeyStore Invalidated</string>
    <string name="keystore_user_auth">User Authorization</string>
    <string name="os_pin_confirm_title">Phone PIN</string>
    <string name="os_pin_confirm_description">This app requires that phone has the passcode (screen lock) enabled.\n\n You may enable it in Android settings.\n\nPlease note that when you disabled the PIN on the OS level the security measures in safe storage of your phonе made the previously stored data invalid. You will need to Restore your wallet keys to get back to your wallet.</string>
    <string name="os_pin_prompt_description">This app requires your phone\'s PIN in order to keep sensitive data from your wallet in Android\'s secure storage and not in the app itself.</string>
    <string name="logout_title">Remove Wallet</string>
    <string name="logout_confirm_wallet_remove">This action will delete the Ethereum key (wallet) from this device.</string>
    <string name="logout_confirm_loose_funds">If you don\’t have a backup of your key, you will lose access to your funds.</string>
    <string name="settings_about_app">About App</string>
    <string name="settings_about_app_title">UDEX</string>
    <string name="settings_about_app_subtitle">Decentralized App</string>
    <string name="settings_about_terms_subtitle">Terms &amp; Privacy:</string>
    <string name="settings_about_terms_text">UDEX runs on a peer-to-peer network. It does not depend on web servers or specialist personnel in order to function.
\n\nProviding there is an internet connection, UDEX will work anywhere in the world. No entity can block the app from functioning or block someone from using it.
\n\nYour funds are securely stored on your phone or tablet. Nobody including UDEX has access to them or can see them.
\n\nIt’s your responsibility to back up your private key and keep it safe. Never show it to anyone. If it’s lost, forgotten, or stolen, your funds are at risk.
\n\nDo not jailbreak your phone, do not install apps from unknown or untrusted sources, do not give your device to untrusted people, and keep the operating system on your phone up to date. Failure to follow this guidance will put your assets at risk.
\n\nThe code powering UDEX is open to public scrutiny and has been since development began. The app is significantly more secure than proprietary smartphone exchanges, but we cannot guarantee an absence of bugs and security issues. The developers accept no liability for lost assets.
\n\nSome non-private app data like currency exchange rates are stored on decentralized storage (IPFS).</string>
    <string name="auth_load_error_title">Auth data decryption failed</string>
    <string name="auth_load_error_description">Something went wrong.\nAuth data can\'t be decrypted so app data will be reset now and you need to re-enter your mnemonic key to restore wallet.</string>
    <string name="send_invalid_recipient_address">Invalid recipient address!</string>
    <string name="chart_touch_to_select_value">Touch chart to select value</string>
    <string name="chart_loading_error">Chart loading error</string>
    <string name="chart_mkt_cap">Mkt. Cap</string>
    <string name="chart_high">High</string>
    <string name="chart_low">Low</string>
    <string name="connection_restored">Connected</string>
    <string name="connection_no_available">No connection…</string>
    <string name="orders_cancel_all">Cancel All Orders</string>
    <string name="orders_cancel">Cancel Order</string>
    <string name="action_add_coin">Add Coin</string>
    <string name="guide_page_1">Welcome to UDEX</string>
    <string name="guide_page_2">What is UDEX?</string>
</resources>