<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.blocksdecoded.dex.presentation.widgets.MainToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:paddingBottom="@dimen/page_margin"
        app:elevation="0dp"
        app:mt_title="@string/title_settings"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.blocksdecoded.dex.presentation.settings.SettingsItemView
                android:id="@+id/security_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/element_margin"
                app:siv_action_switch="false"
                app:siv_title="@string/settings_security_center"
                app:siv_icon="@drawable/ic_security"
                android:background="?selectableItemBackground"/>

            <com.blocksdecoded.dex.presentation.settings.SettingsItemView
                android:id="@+id/exchange_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/security_center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:siv_action_switch="false"
                app:siv_title="@string/settings_history"
                app:siv_icon="@drawable/ic_about"
                android:background="?selectableItemBackground" />

            <com.blocksdecoded.dex.presentation.settings.SettingsItemView
                android:id="@+id/coin_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/exchange_history"
                app:layout_constraintLeft_toLeftOf="parent"
                app:siv_action_switch="false"
                app:siv_title="@string/settings_coin_manager"
                app:siv_icon="@drawable/ic_dollar_sign"
                android:background="?selectableItemBackground" />

            <com.blocksdecoded.dex.presentation.settings.SettingsItemView
                android:id="@+id/address_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/coin_manager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:siv_action_switch="false"
                app:siv_title="@string/settings_address_book"
                app:siv_icon="@drawable/ic_address_book"
                android:background="?selectableItemBackground"
                android:visibility="gone"/>

            <com.blocksdecoded.dex.presentation.settings.SettingsItemView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/page_margin"
                app:siv_action_switch="false"
                app:siv_title="@string/settings_language"
                app:siv_icon="@drawable/ic_language"
                android:background="?selectableItemBackground"
                android:visibility="gone"/>

            <com.blocksdecoded.dex.presentation.settings.SettingsItemView
                android:id="@+id/light_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/address_book"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/page_margin"
                app:siv_action_switch="true"
                app:siv_title="@string/settings_light_mode"
                app:siv_icon="@drawable/ic_light_mode"
                android:background="?selectableItemBackground" />

            <com.blocksdecoded.dex.presentation.settings.SettingsItemView
                android:id="@+id/about_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/light_mode"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/big_margin"
                app:siv_action_switch="false"
                app:siv_title="@string/settings_about_app"
                app:siv_icon="@drawable/ic_about"
                android:background="?selectableItemBackground" />

            <com.blocksdecoded.dex.presentation.settings.SettingsItemView
                android:id="@+id/share_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/about_app"
                app:layout_constraintLeft_toLeftOf="parent"
                app:siv_action_switch="false"
                app:siv_title="@string/settings_share"
                app:siv_icon="@drawable/ic_share"
                android:background="?selectableItemBackground" />

            <TextView
                android:id="@+id/app_version"
                style="@style/SmallHintText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/share_app"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAllCaps="false"
                android:gravity="center"
                android:text="v 1.0.0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
