<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.blocksdecoded.dex.presentation.widgets.MainToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="@dimen/element_margin"
        app:mt_title="@string/settings_about_app"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/page_margin"
            android:layout_marginEnd="@dimen/page_margin">

                <ImageView
                    android:id="@+id/about_app_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/page_margin"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/about_app_name"
                    style="@style/DialogTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/page_margin"
                    android:text="@string/settings_about_app_title"
                    android:textColor="?attr/PrimaryTextColor"
                    app:layout_constraintStart_toEndOf="@+id/about_app_icon"
                    app:layout_constraintTop_toTopOf="@+id/about_app_icon" />

                <TextView
                    android:id="@+id/about_app_description"
                    style="@style/HintText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_about_app_subtitle"
                    app:layout_constraintStart_toStartOf="@+id/about_app_name"
                    app:layout_constraintTop_toBottomOf="@+id/about_app_name" />

                <View
                    style="@style/Divider"
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/page_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about_app_icon" />

                <TextView
                    style="@style/BoldText"
                    android:id="@+id/about_terms_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/page_margin"
                    android:text="@string/settings_about_terms_subtitle"
                    android:textColor="@color/main_light_text"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <TextView
                    style="@style/RegularText"
                    android:id="@+id/about_terms_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/page_margin"
                    android:paddingBottom="@dimen/big_margin"
                    android:textColor="?attr/PrimaryLightColor"
                    android:text="@string/settings_about_terms_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about_terms_subtitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
